Sat Aug 4 18:51:28 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data.cpp(get_sample_for_cosine_mixer,
	do_cubic_mixer_voodoo, get_sample_for_linear_mixer):
	Reintroduced blank-sample generation when these are called
	with Sample_Data::eof_reached() == true. Necessary now that
	fixedpoint_move_cursor no longer ensures that the cursor will
	stay within bounds.

	* sample_data.cpp(blank_sample): Changed "zero" from being a
	template argument to a function argument, because GCC 4.1.2
	can't compile this template if TYPE==float.
	
Sat Aug 4 18:26:52 EDT 2007 J Phelps <godless@users.sf.net>
	* tracker_voice.cpp(add_to_mix_buffer): Samples no longer
	continue playing past the end.
Sat Aug 4 18:08:08 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data_fixedpoint.h(fixedpoint_move_cursor): Removed
	bounds checking, as this is handled in fixedpoint_loop.
Sat Aug 4 15:21:40 EDT 2007 J Phelps <godless@users.sf.net>
	* resample_kernel.cpp (mix_sample): Fixed a math bug that caused
	pitch envelopes to sound like shit if they were used as filters.
Fri Aug 3 04:54:44 EDT 2007 J Phelps <godless@users.sf.net>
	* dds_helpers.cpp (get_sample_data,set_sample_data):
	Added support for multi-channel samples, at last!!!!
Fri Aug 3 02:44:54 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data.h
	  sample_data.cpp (get_current_pos): Changed return type
	from size_t to ptrdiff_t.
	* tracker_voice.h: Changed type of Tracker_Voice::current_index
	from size_t to ptrdiff_t.
Fri Aug 3 01:54:44 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_viewer.cpp (paintEvent): Fixed fencepost bug
	that was causing the GNU vector class's array bounds
	checking to trip.
	* mdi_main_window.cpp: Updated version and website strings.
Wed Aug 1 02:02:12 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data_fixedpoint.h (fixedpoint_loop): Copied in
	the version of fixedpoint_loop() from Revision 57.
	* sample_data.h: Changed type of current_pos from size_t
	to ptrdiff_t.