@@ -30,9 +30,9 @@
 //
 
 #define APP_NAME_ "CheeseTracker "
-#define APP_VERSION_ "0.9.14"
+#define APP_VERSION_ "0.9.14.1"
 #define APP_AUTHOR_ "(c) 1999,2004 Juan Linietsky"
-#define APP_RELEASE_DATE_ "Sun Apr  8 09:42:45 EDT 2007"
+#define APP_RELEASE_DATE_ "Sat Aug  4 19:40:16 EDT 2007"
 #define APP_MAINTAINER_ "J Phelps <godless@users.sf.net>"
 #define APP_WEBSITE_ "http://cheesetracker.sf.net/"
 
